# tzf-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  NOTICE  README.md  THIRDPARTY.yml  THIRD_PARTY_LICENSES.txt  buf.gen.yaml  buf.yaml  build.rs  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy_doc.yml  release.yml  rust.yml
benches/: bench_beijing.rs  bench_beijing_default.rs  bench_beijing_fuzzy.rs  edges.json  edges.rs  finders.rs  finders_full.rs  simple.rs
examples/: defaut.rs  demo.rs  export_specific_timezones.rs  export_tokyo.rs  finder.rs  fuzzy.rs  gen_edges.rs  geojson_conversion.rs  index_memory_probe.rs  index_memory_probe_alloc.rs  index_memory_probe_full.rs  query_tokyo.rs  to_geojson.rs
examples/demo/: main.rs
examples/full-data/: .gitignore  Cargo.toml  README.md  download.sh
examples/full-data/src/: main.rs
pb/tzf/v1/: tzinfo.proto
scripts/: bench_memory.sh  bench_memory_full.sh  bench_memory_full_report.py  bench_memory_parse.py  bench_memory_report.py  build_notice.py
src/: geometry.rs  lib.rs  main.rs  mod.rs
src/pbgen/: mod.rs  tzf.v1.rs
tests/: basic_test.rs  compact_raycast.rs  default.rs  full_test.rs  fuzzy_test.rs  geojson_specific_tz_test.rs  geojson_test.rs
