[package]
description = "Fast convert longitude,latitude to timezone name."
documentation = "https://docs.rs/tzf-rs"
edition = "2024"
homepage = "https://github.com/ringsaturn/tzf-rs"
keywords = ["timezone", "geo"]
license = "MIT"
name = "tzf-rs"
readme = "README.md"
repository = "https://github.com/ringsaturn/tzf-rs"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = [
    "color",
    "help",
    "usage",
    "derive",
], optional = true }
prost = "0.14.1"

# tzf-rel = { git =  "https://github.com/ringsaturn/tzf-rel", tag = "v0.0.2022-f5"}
tzf-rel = "0.0.2025-b"

# geometry-rs = { git =  "https://github.com/ringsaturn/geometry-rs", rev = "1c7231d"}
geometry-rs = "0.3.3"

[dev-dependencies]
lazy_static = "1.5.0"

criterion = { version = "0.7", features = ["html_reports"] }

# cities-json = { git = "https://github.com/ringsaturn/go-cities.json" , rev = "0660039" }
cities-json = "0.6.8"

[features]
default = ["clap"]

[[bin]]
name = "tzf"
required-features = ["clap"]
doc = false

[[bench]]
harness = false
name = "finders"

[build-dependencies]
prost-build = "0.14.1"

[profile.bench]
lto = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }
