[package]
authors = [
  "ringsaturn <ringsaturn.me@gmail.com>",
]
categories = [
  "science::geo",
  "date-and-time",
  "command-line-utilities",
]
description = "Fast convert longitude,latitude to timezone name."
documentation = "https://docs.rs/tzf-rs"
edition = "2024"
homepage = "https://github.com/ringsaturn/tzf-rs"
keywords = [
  "timezone",
  "geo",
]
license = "MIT"
name = "tzf-rs"
readme = "README.md"
repository = "https://github.com/ringsaturn/tzf-rs"
version = "1.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = {version = "4", features = [
  "color",
  "help",
  "usage",
  "derive",
], optional = true}
geometry-rs = "0.4.1"
prost = "0.14.1"
serde = {version = "1.0.228", features = [
  "derive",
], optional = true}
serde_json = {version = "1.0.145", optional = true}

# Topology-simplified dataset from crates.io (~7 MB). Activated by the "bundled" feature.
tzf-dist = {version = "0.0.2026-a", optional = true}

# Full-precision dataset from git (~17 MB). Activated by the "full" feature.
# The data binary is too large for crates.io; this dep is git-only.
# version= satisfies the crates.io manifest check; cargo publish verifies default features only.
tzf-dist-git = {package = "tzf-dist", version = "0.0.2026-a", git = "https://github.com/ringsaturn/tzf-dist", rev = "v0.0.2026-a", features = [
  "full",
], optional = true}

[dev-dependencies]
cities-json = "0.6.8"
criterion = {version = "0.8", features = [
  "html_reports",
]}
lazy_static = "1.5.0"

[features]
# "bundled" wraps dep:tzf-dist so it is detectable via cfg(feature = "bundled")
# and can be excluded when "full" is enabled.
default = [
  "clap",
  "bundled",
]
bundled = ["dep:tzf-dist"]
export-geojson = [
  "serde",
  "serde_json",
]
# Full-precision polygon data (~17 MB, git-only). Mutually exclusive with "bundled".
# Usage: default-features = false, features = ["full"]   (add "clap" for the CLI binary)
full = ["dep:tzf-dist-git"]

[[bin]]
doc = false
name = "tzf"
required-features = [
  "clap",
]

[[bench]]
harness = false
name = "finders"
required-features = ["bundled"]

[[bench]]
harness = false
name = "finders_full"
required-features = ["full"]

[[example]]
name = "index_memory_probe_full"
required-features = ["full"]

[build-dependencies]
prost-build = "0.14.1"

[profile.bench]
lto = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof = {version = "0.15", features = [
  "flamegraph",
]}

[package.metadata.docs.rs]
# docs.rs cannot resolve git dependencies, so only document the "bundled" path.
features = ["bundled", "export-geojson"]
rustdoc-args = [
  "--cfg",
  "docsrs",
]
